Added line breaks for easier diffs.

--- a/report/index.html
+++ b/report/index.html
@@ -23,7 +23,92 @@
     <div class="container-fluid">
         <h1>exiftool.js coverage report</h1>
         <p>Compare the outputs from exiftool and exiftool.js</p>
-        <p>5516 total files</p><p>71513 total supported tags</p><p>121346 total unsupported tags</p><ul><li><a href='sampleImages-Acer.html'>sampleImages-Acer.html</a> Supported: 254, Unsupported: 432</li><li><a href='sampleImages-Agfa.html'>sampleImages-Agfa.html</a> Supported: 327, Unsupported: 589</li><li><a href='sampleImages-Aiptek.html'>sampleImages-Aiptek.html</a> Supported: 189, Unsupported: 302</li><li><a href='sampleImages-Apple.html'>sampleImages-Apple.html</a> Supported: 187, Unsupported: 377</li><li><a href='sampleImages-BBK.html'>sampleImages-BBK.html</a> Supported: 64, Unsupported: 136</li><li><a href='sampleImages-BenQ.html'>sampleImages-BenQ.html</a> Supported: 1104, Unsupported: 2018</li><li><a href='sampleImages-Camera.html'>sampleImages-Camera.html</a> Supported: 893, Unsupported: 1587</li><li><a href='sampleImages-Canon.html'>sampleImages-Canon.html</a> Supported: 6887, Unsupported: 16086</li><li><a href='sampleImages-Casio.html'>sampleImages-Casio.html</a> Supported: 2129, Unsupported: 3848</li><li><a href='sampleImages-Concord.html'>sampleImages-Concord.html</a> Supported: 627, Unsupported: 1137</li><li><a href='sampleImages-Creative.html'>sampleImages-Creative.html</a> Supported: 188, Unsupported: 313</li><li><a href='sampleImages-DXG.html'>sampleImages-DXG.html</a> Supported: 121, Unsupported: 224</li><li><a href='sampleImages-Daisy.html'>sampleImages-Daisy.html</a> Supported: 79, Unsupported: 127</li><li><a href='sampleImages-Digilife.html'>sampleImages-Digilife.html</a> Supported: 45, Unsupported: 80</li><li><a href='sampleImages-DoCoMo.html'>sampleImages-DoCoMo.html</a> Supported: 763, Unsupported: 1163</li><li><a href='sampleImages-Epson.html'>sampleImages-Epson.html</a> Supported: 324, Unsupported: 507</li><li><a href='sampleImages-FLIR.html'>sampleImages-FLIR.html</a> Supported: 7, Unsupported: 17</li><li><a href='sampleImages-Fly.html'>sampleImages-Fly.html</a> Supported: 68, Unsupported: 143</li><li><a href='sampleImages-FujiFilm.html'>sampleImages-FujiFilm.html</a> Supported: 6281, Unsupported: 9540</li><li><a href='sampleImages-GE.html'>sampleImages-GE.html</a> Supported: 348, Unsupported: 659</li><li><a href='sampleImages-Gateway.html'>sampleImages-Gateway.html</a> Supported: 61, Unsupported: 111</li><li><a href='sampleImages-Genius.html'>sampleImages-Genius.html</a> Supported: 106, Unsupported: 179</li><li><a href='sampleImages-GoPro.html'>sampleImages-GoPro.html</a> Supported: 99, Unsupported: 206</li><li><a href='sampleImages-Google.html'>sampleImages-Google.html</a> Supported: 8, Unsupported: 19</li><li><a href='sampleImages-HP.html'>sampleImages-HP.html</a> Supported: 1821, Unsupported: 2406</li><li><a href='sampleImages-HTC.html'>sampleImages-HTC.html</a> Supported: 562, Unsupported: 908</li><li><a href='sampleImages-Hasselblad.html'>sampleImages-Hasselblad.html</a> Supported: 18, Unsupported: 32</li><li><a href='sampleImages-Hitachi.html'>sampleImages-Hitachi.html</a> Supported: 289, Unsupported: 406</li><li><a href='sampleImages-ImpressCam.html'>sampleImages-ImpressCam.html</a> Supported: 78, Unsupported: 187</li><li><a href='sampleImages-KDDI.html'>sampleImages-KDDI.html</a> Supported: 776, Unsupported: 1095</li><li><a href='sampleImages-Kodak.html'>sampleImages-Kodak.html</a> Supported: 2581, Unsupported: 4462</li><li><a href='sampleImages-Konica.html'>sampleImages-Konica.html</a> Supported: 298, Unsupported: 480</li><li><a href='sampleImages-Kyocera.html'>sampleImages-Kyocera.html</a> Supported: 355, Unsupported: 637</li><li><a href='sampleImages-LG.html'>sampleImages-LG.html</a> Supported: 1239, Unsupported: 1758</li><li><a href='sampleImages-Legend.html'>sampleImages-Legend.html</a> Supported: 145, Unsupported: 250</li><li><a href='sampleImages-Leica.html'>sampleImages-Leica.html</a> Supported: 571, Unsupported: 890</li><li><a href='sampleImages-Logitech.html'>sampleImages-Logitech.html</a> Supported: 40, Unsupported: 84</li><li><a href='sampleImages-Lumicron.html'>sampleImages-Lumicron.html</a> Supported: 87, Unsupported: 150</li><li><a href='sampleImages-Medion.html'>sampleImages-Medion.html</a> Supported: 238, Unsupported: 469</li><li><a href='sampleImages-Mercury.html'>sampleImages-Mercury.html</a> Supported: 91, Unsupported: 170</li><li><a href='sampleImages-Minolta.html'>sampleImages-Minolta.html</a> Supported: 842, Unsupported: 1388</li><li><a href='sampleImages-Motorola.html'>sampleImages-Motorola.html</a> Supported: 455, Unsupported: 572</li><li><a href='sampleImages-Mustek.html'>sampleImages-Mustek.html</a> Supported: 64, Unsupported: 127</li><li><a href='sampleImages-NEC.html'>sampleImages-NEC.html</a> Supported: 40, Unsupported: 40</li><li><a href='sampleImages-Nikon.html'>sampleImages-Nikon.html</a> Supported: 4018, Unsupported: 6978</li><li><a href='sampleImages-Nintendo.html'>sampleImages-Nintendo.html</a> Supported: 18, Unsupported: 20</li><li><a href='sampleImages-Nokia.html'>sampleImages-Nokia.html</a> Supported: 1596, Unsupported: 2344</li><li><a href='sampleImages-Noritsu.html'>sampleImages-Noritsu.html</a> Supported: 57, Unsupported: 81</li><li><a href='sampleImages-ODYS.html'>sampleImages-ODYS.html</a> Supported: 125, Unsupported: 267</li><li><a href='sampleImages-OMG.html'>sampleImages-OMG.html</a> Supported: 5, Unsupported: 14</li><li><a href='sampleImages-Oregon.html'>sampleImages-Oregon.html</a> Supported: 69, Unsupported: 117</li><li><a href='sampleImages-Packard.html'>sampleImages-Packard.html</a> Supported: 20, Unsupported: 35</li><li><a href='sampleImages-Panasonic.html'>sampleImages-Panasonic.html</a> Supported: 6197, Unsupported: 8928</li><li><a href='sampleImages-Pantech.html'>sampleImages-Pantech.html</a> Supported: 136, Unsupported: 153</li><li><a href='sampleImages-Pentacon.html'>sampleImages-Pentacon.html</a> Supported: 518, Unsupported: 957</li><li><a href='sampleImages-Pentax.html'>sampleImages-Pentax.html</a> Supported: 2028, Unsupported: 3236</li><li><a href='sampleImages-Polaroid.html'>sampleImages-Polaroid.html</a> Supported: 854, Unsupported: 1691</li><li><a href='sampleImages-RIM.html'>sampleImages-RIM.html</a> Supported: 142, Unsupported: 172</li><li><a href='sampleImages-Reconyx.html'>sampleImages-Reconyx.html</a> Supported: 33, Unsupported: 61</li><li><a href='sampleImages-Ricoh.html'>sampleImages-Ricoh.html</a> Supported: 1110, Unsupported: 1912</li><li><a href='sampleImages-Rollei.html'>sampleImages-Rollei.html</a> Supported: 256, Unsupported: 478</li><li><a href='sampleImages-Sagem.html'>sampleImages-Sagem.html</a> Supported: 101, Unsupported: 92</li><li><a href='sampleImages-Samsung.html'>sampleImages-Samsung.html</a> Supported: 7447, Unsupported: 12081</li><li><a href='sampleImages-Sanyo.html'>sampleImages-Sanyo.html</a> Supported: 1171, Unsupported: 1892</li><li><a href='sampleImages-SeaLife.html'>sampleImages-SeaLife.html</a> Supported: 87, Unsupported: 149</li><li><a href='sampleImages-Sharp.html'>sampleImages-Sharp.html</a> Supported: 608, Unsupported: 944</li><li><a href='sampleImages-SiPix.html'>sampleImages-SiPix.html</a> Supported: 46, Unsupported: 81</li><li><a href='sampleImages-Sigma.html'>sampleImages-Sigma.html</a> Supported: 205, Unsupported: 409</li><li><a href='sampleImages-Skanhex.html'>sampleImages-Skanhex.html</a> Supported: 114, Unsupported: 224</li><li><a href='sampleImages-Sony.html'>sampleImages-Sony.html</a> Supported: 9025, Unsupported: 14782</li><li><a href='sampleImages-SonyEricsson.html'>sampleImages-SonyEricsson.html</a> Supported: 1573, Unsupported: 3038</li><li><a href='sampleImages-Sprint.html'>sampleImages-Sprint.html</a> Supported: 13, Unsupported: 19</li><li><a href='sampleImages-Sunplus.html'>sampleImages-Sunplus.html</a> Supported: 57, Unsupported: 99</li><li><a href='sampleImages-T-Mobile.html'>sampleImages-T-Mobile.html</a> Supported: 16, Unsupported: 18</li><li><a href='sampleImages-Toshiba.html'>sampleImages-Toshiba.html</a> Supported: 480, Unsupported: 788</li><li><a href='sampleImages-Traveler.html'>sampleImages-Traveler.html</a> Supported: 308, Unsupported: 590</li><li><a href='sampleImages-Trust.html'>sampleImages-Trust.html</a> Supported: 170, Unsupported: 327</li><li><a href='sampleImages-UMAX.html'>sampleImages-UMAX.html</a> Supported: 34, Unsupported: 62</li><li><a href='sampleImages-Uniden.html'>sampleImages-Uniden.html</a> Supported: 18, Unsupported: 29</li><li><a href='sampleImages-Visioneer.html'>sampleImages-Visioneer.html</a> Supported: 15, Unsupported: 24</li><li><a href='sampleImages-VistaQuest.html'>sampleImages-VistaQuest.html</a> Supported: 10, Unsupported: 21</li><li><a href='sampleImages-Vivitar.html'>sampleImages-Vivitar.html</a> Supported: 853, Unsupported: 1563</li><li><a href='sampleImages-Vodafone.html'>sampleImages-Vodafone.html</a> Supported: 90, Unsupported: 108</li><li><a href='sampleImages-Yakumo.html'>sampleImages-Yakumo.html</a> Supported: 94, Unsupported: 169</li><li><a href='sampleImages-Yashica.html'>sampleImages-Yashica.html</a> Supported: 47, Unsupported: 82</li></ul>
+        <p>5516 total files</p><p>71513 total supported tags</p><p>121345 total unsupported tags</p><ul><li><a href='sampleImages-Acer.html'>sampleImages-Acer.html</a> Supported: 254, Unsupported: 432</li>
+<li><a href='sampleImages-Agfa.html'>sampleImages-Agfa.html</a> Supported: 327, Unsupported: 589</li>
+<li><a href='sampleImages-Aiptek.html'>sampleImages-Aiptek.html</a> Supported: 189, Unsupported: 302</li>
+<li><a href='sampleImages-Apple.html'>sampleImages-Apple.html</a> Supported: 187, Unsupported: 377</li>
+<li><a href='sampleImages-BBK.html'>sampleImages-BBK.html</a> Supported: 64, Unsupported: 136</li>
+<li><a href='sampleImages-BenQ.html'>sampleImages-BenQ.html</a> Supported: 1104, Unsupported: 2018</li>
+<li><a href='sampleImages-Camera.html'>sampleImages-Camera.html</a> Supported: 893, Unsupported: 1587</li>
+<li><a href='sampleImages-Canon.html'>sampleImages-Canon.html</a> Supported: 6887, Unsupported: 16085</li>
+<li><a href='sampleImages-Casio.html'>sampleImages-Casio.html</a> Supported: 2129, Unsupported: 3848</li>
+<li><a href='sampleImages-Concord.html'>sampleImages-Concord.html</a> Supported: 627, Unsupported: 1137</li>
+<li><a href='sampleImages-Creative.html'>sampleImages-Creative.html</a> Supported: 188, Unsupported: 313</li>
+<li><a href='sampleImages-DXG.html'>sampleImages-DXG.html</a> Supported: 121, Unsupported: 224</li>
+<li><a href='sampleImages-Daisy.html'>sampleImages-Daisy.html</a> Supported: 79, Unsupported: 127</li>
+<li><a href='sampleImages-Digilife.html'>sampleImages-Digilife.html</a> Supported: 45, Unsupported: 80</li>
+<li><a href='sampleImages-DoCoMo.html'>sampleImages-DoCoMo.html</a> Supported: 763, Unsupported: 1163</li>
+<li><a href='sampleImages-Epson.html'>sampleImages-Epson.html</a> Supported: 324, Unsupported: 507</li>
+<li><a href='sampleImages-FLIR.html'>sampleImages-FLIR.html</a> Supported: 7, Unsupported: 17</li>
+<li><a href='sampleImages-Fly.html'>sampleImages-Fly.html</a> Supported: 68, Unsupported: 143</li>
+<li><a href='sampleImages-FujiFilm.html'>sampleImages-FujiFilm.html</a> Supported: 6281, Unsupported: 9540</li>
+<li><a href='sampleImages-GE.html'>sampleImages-GE.html</a> Supported: 348, Unsupported: 659</li>
+<li><a href='sampleImages-Gateway.html'>sampleImages-Gateway.html</a> Supported: 61, Unsupported: 111</li>
+<li><a href='sampleImages-Genius.html'>sampleImages-Genius.html</a> Supported: 106, Unsupported: 179</li>
+<li><a href='sampleImages-GoPro.html'>sampleImages-GoPro.html</a> Supported: 99, Unsupported: 206</li>
+<li><a href='sampleImages-Google.html'>sampleImages-Google.html</a> Supported: 8, Unsupported: 19</li>
+<li><a href='sampleImages-HP.html'>sampleImages-HP.html</a> Supported: 1821, Unsupported: 2406</li>
+<li><a href='sampleImages-HTC.html'>sampleImages-HTC.html</a> Supported: 562, Unsupported: 908</li>
+<li><a href='sampleImages-Hasselblad.html'>sampleImages-Hasselblad.html</a> Supported: 18, Unsupported: 32</li>
+<li><a href='sampleImages-Hitachi.html'>sampleImages-Hitachi.html</a> Supported: 289, Unsupported: 406</li>
+<li><a href='sampleImages-ImpressCam.html'>sampleImages-ImpressCam.html</a> Supported: 78, Unsupported: 187</li>
+<li><a href='sampleImages-KDDI.html'>sampleImages-KDDI.html</a> Supported: 776, Unsupported: 1095</li>
+<li><a href='sampleImages-Kodak.html'>sampleImages-Kodak.html</a> Supported: 2581, Unsupported: 4462</li>
+<li><a href='sampleImages-Konica.html'>sampleImages-Konica.html</a> Supported: 298, Unsupported: 480</li>
+<li><a href='sampleImages-Kyocera.html'>sampleImages-Kyocera.html</a> Supported: 355, Unsupported: 637</li>
+<li><a href='sampleImages-LG.html'>sampleImages-LG.html</a> Supported: 1239, Unsupported: 1758</li>
+<li><a href='sampleImages-Legend.html'>sampleImages-Legend.html</a> Supported: 145, Unsupported: 250</li>
+<li><a href='sampleImages-Leica.html'>sampleImages-Leica.html</a> Supported: 571, Unsupported: 890</li>
+<li><a href='sampleImages-Logitech.html'>sampleImages-Logitech.html</a> Supported: 40, Unsupported: 84</li>
+<li><a href='sampleImages-Lumicron.html'>sampleImages-Lumicron.html</a> Supported: 87, Unsupported: 150</li>
+<li><a href='sampleImages-Medion.html'>sampleImages-Medion.html</a> Supported: 238, Unsupported: 469</li>
+<li><a href='sampleImages-Mercury.html'>sampleImages-Mercury.html</a> Supported: 91, Unsupported: 170</li>
+<li><a href='sampleImages-Minolta.html'>sampleImages-Minolta.html</a> Supported: 842, Unsupported: 1388</li>
+<li><a href='sampleImages-Motorola.html'>sampleImages-Motorola.html</a> Supported: 455, Unsupported: 572</li>
+<li><a href='sampleImages-Mustek.html'>sampleImages-Mustek.html</a> Supported: 64, Unsupported: 127</li>
+<li><a href='sampleImages-NEC.html'>sampleImages-NEC.html</a> Supported: 40, Unsupported: 40</li>
+<li><a href='sampleImages-Nikon.html'>sampleImages-Nikon.html</a> Supported: 4018, Unsupported: 6978</li>
+<li><a href='sampleImages-Nintendo.html'>sampleImages-Nintendo.html</a> Supported: 18, Unsupported: 20</li>
+<li><a href='sampleImages-Nokia.html'>sampleImages-Nokia.html</a> Supported: 1596, Unsupported: 2344</li>
+<li><a href='sampleImages-Noritsu.html'>sampleImages-Noritsu.html</a> Supported: 57, Unsupported: 81</li>
+<li><a href='sampleImages-ODYS.html'>sampleImages-ODYS.html</a> Supported: 125, Unsupported: 267</li>
+<li><a href='sampleImages-OMG.html'>sampleImages-OMG.html</a> Supported: 5, Unsupported: 14</li>
+<li><a href='sampleImages-Oregon.html'>sampleImages-Oregon.html</a> Supported: 69, Unsupported: 117</li>
+<li><a href='sampleImages-Packard.html'>sampleImages-Packard.html</a> Supported: 20, Unsupported: 35</li>
+<li><a href='sampleImages-Panasonic.html'>sampleImages-Panasonic.html</a> Supported: 6197, Unsupported: 8928</li>
+<li><a href='sampleImages-Pantech.html'>sampleImages-Pantech.html</a> Supported: 136, Unsupported: 153</li>
+<li><a href='sampleImages-Pentacon.html'>sampleImages-Pentacon.html</a> Supported: 518, Unsupported: 957</li>
+<li><a href='sampleImages-Pentax.html'>sampleImages-Pentax.html</a> Supported: 2028, Unsupported: 3236</li>
+<li><a href='sampleImages-Polaroid.html'>sampleImages-Polaroid.html</a> Supported: 854, Unsupported: 1691</li>
+<li><a href='sampleImages-RIM.html'>sampleImages-RIM.html</a> Supported: 142, Unsupported: 172</li>
+<li><a href='sampleImages-Reconyx.html'>sampleImages-Reconyx.html</a> Supported: 33, Unsupported: 61</li>
+<li><a href='sampleImages-Ricoh.html'>sampleImages-Ricoh.html</a> Supported: 1110, Unsupported: 1912</li>
+<li><a href='sampleImages-Rollei.html'>sampleImages-Rollei.html</a> Supported: 256, Unsupported: 478</li>
+<li><a href='sampleImages-Sagem.html'>sampleImages-Sagem.html</a> Supported: 101, Unsupported: 92</li>
+<li><a href='sampleImages-Samsung.html'>sampleImages-Samsung.html</a> Supported: 7447, Unsupported: 12081</li>
+<li><a href='sampleImages-Sanyo.html'>sampleImages-Sanyo.html</a> Supported: 1171, Unsupported: 1892</li>
+<li><a href='sampleImages-SeaLife.html'>sampleImages-SeaLife.html</a> Supported: 87, Unsupported: 149</li>
+<li><a href='sampleImages-Sharp.html'>sampleImages-Sharp.html</a> Supported: 608, Unsupported: 944</li>
+<li><a href='sampleImages-SiPix.html'>sampleImages-SiPix.html</a> Supported: 46, Unsupported: 81</li>
+<li><a href='sampleImages-Sigma.html'>sampleImages-Sigma.html</a> Supported: 205, Unsupported: 409</li>
+<li><a href='sampleImages-Skanhex.html'>sampleImages-Skanhex.html</a> Supported: 114, Unsupported: 224</li>
+<li><a href='sampleImages-Sony.html'>sampleImages-Sony.html</a> Supported: 9025, Unsupported: 14782</li>
+<li><a href='sampleImages-SonyEricsson.html'>sampleImages-SonyEricsson.html</a> Supported: 1573, Unsupported: 3038</li>
+<li><a href='sampleImages-Sprint.html'>sampleImages-Sprint.html</a> Supported: 13, Unsupported: 19</li>
+<li><a href='sampleImages-Sunplus.html'>sampleImages-Sunplus.html</a> Supported: 57, Unsupported: 99</li>
+<li><a href='sampleImages-T-Mobile.html'>sampleImages-T-Mobile.html</a> Supported: 16, Unsupported: 18</li>
+<li><a href='sampleImages-Toshiba.html'>sampleImages-Toshiba.html</a> Supported: 480, Unsupported: 788</li>
+<li><a href='sampleImages-Traveler.html'>sampleImages-Traveler.html</a> Supported: 308, Unsupported: 590</li>
+<li><a href='sampleImages-Trust.html'>sampleImages-Trust.html</a> Supported: 170, Unsupported: 327</li>
+<li><a href='sampleImages-UMAX.html'>sampleImages-UMAX.html</a> Supported: 34, Unsupported: 62</li>
+<li><a href='sampleImages-Uniden.html'>sampleImages-Uniden.html</a> Supported: 18, Unsupported: 29</li>
+<li><a href='sampleImages-Visioneer.html'>sampleImages-Visioneer.html</a> Supported: 15, Unsupported: 24</li>
+<li><a href='sampleImages-VistaQuest.html'>sampleImages-VistaQuest.html</a> Supported: 10, Unsupported: 21</li>
+<li><a href='sampleImages-Vivitar.html'>sampleImages-Vivitar.html</a> Supported: 853, Unsupported: 1563</li>
+<li><a href='sampleImages-Vodafone.html'>sampleImages-Vodafone.html</a> Supported: 90, Unsupported: 108</li>
+<li><a href='sampleImages-Yakumo.html'>sampleImages-Yakumo.html</a> Supported: 94, Unsupported: 169</li>
+<li><a href='sampleImages-Yashica.html'>sampleImages-Yashica.html</a> Supported: 47, Unsupported: 82</li>
+</ul>
     </div>
 
 
