--- a/report/sampleImages-Packard.html
+++ b/report/sampleImages-Packard.html
@@ -23,7 +23,138 @@
     <div class="container-fluid">
         <h1>exiftool.js coverage report</h1>
         <p>Compare the outputs from exiftool and exiftool.js</p>
-        <table class='table table-bordered'><thead><tr><th>image</th><th>supported tags</th><th>unsupported tags (perl output, followed by js output)</th></tr></thead><tbody><tr><td>sampleImages/Packard/PackardBellDSC-220.jpg</td><td>ColorSpace<br>CompressedBitsPerPixel<br>DateTimeOriginal<br>ExifVersion<br>FlashpixVersion<br>Make<br>Model<br>SceneType<br>Software</td><td>ComponentsConfiguration : Y, Cb, Cr, -<br>ComponentsConfiguration : YCbCr<br><br>DateTime : undefined<br>DateTime : 2003:03:22 01:06:40<br><br>DateTimeDigitized : undefined<br>DateTimeDigitized : 2003:03:22 01:06:40<br><br>ExifIFDPointer : undefined<br>ExifIFDPointer : 156<br><br>ExposureBias : undefined<br>ExposureBias : 0<br><br>ExposureProgram : Program AE<br>ExposureProgram : Normal program<br><br>FileSource : Digital Camera<br>FileSource : DSC<br><br>Flash : Fired<br>Flash : Flash fired<br><br>ISOSpeedRatings : undefined<br>ISOSpeedRatings : 133<br><br>ImageDescription : ?<br>ImageDescription : <br><br>LightSource : Unknown<br>LightSource : <br><br>MeteringMode : Center-weighted average<br>MeteringMode : CenterWeightedAverage<br><br>PixelXDimension : undefined<br>PixelXDimension : 1280<br><br>PixelYDimension : undefined<br>PixelYDimension : 1024<br><br>YCbCrPositioning : Co-sited<br>YCbCrPositioning : 2<br></td></tr><tr><td>sampleImages/Packard/PackardBellDSC-200.jpg</td><td>ColorSpace<br>Copyright<br>DateTimeOriginal<br>ExifVersion<br>FNumber<br>FlashpixVersion<br>Make<br>Model<br>SceneType<br>XResolution<br>YResolution</td><td>ComponentsConfiguration : Y, Cb, Cr, -<br>ComponentsConfiguration : YCbCr<br><br>DateTime : undefined<br>DateTime : 2004:03:05 11:28:04<br><br>DateTimeDigitized : undefined<br>DateTimeDigitized : 2004:03:05 11:28:04<br><br>ExifIFDPointer : undefined<br>ExifIFDPointer : 250<br><br>ExposureBias : undefined<br>ExposureBias : 0<br><br>ExposureProgram : Landscape<br>ExposureProgram : Landscape mode<br><br>ExposureTime : 1/26<br>ExposureTime : 0.038461538461538464<br><br>FileSource : Digital Camera<br>FileSource : DSC<br><br>Flash : No Flash<br>Flash : Flash did not fire<br><br>FocalLength : 6.8 mm<br>FocalLength : 6.8<br><br>ISOSpeedRatings : undefined<br>ISOSpeedRatings : 100<br><br>InteroperabilityIFDPointer : undefined<br>InteroperabilityIFDPointer : 570<br><br>MeteringMode : Center-weighted average<br>MeteringMode : CenterWeightedAverage<br><br>Orientation : Horizontal (normal)<br>Orientation : 1<br><br>PixelXDimension : undefined<br>PixelXDimension : 829<br><br>PixelYDimension : undefined<br>PixelYDimension : 622<br><br>ResolutionUnit : inches<br>ResolutionUnit : 2<br><br>SensingMethod : One-chip color area<br>SensingMethod : One-chip color area sensor<br><br>Software : V0.98 & SDK 3.8<br>Software : V0.98  SDK 3.8<br><br>YCbCrPositioning : Co-sited<br>YCbCrPositioning : 2<br></td></tr></tbody></table>
+        <table class='table table-bordered'><thead><tr><th>image</th><th>supported tags</th><th>unsupported tags (perl output, followed by js output)</th></tr></thead><tbody><tr>
+<td>sampleImages/Packard/PackardBellDSC-220.jpg</td>
+<td>ColorSpace<br>
+CompressedBitsPerPixel<br>
+DateTimeOriginal<br>
+ExifVersion<br>
+FlashpixVersion<br>
+Make<br>
+Model<br>
+SceneType<br>
+Software</td>
+<td>ComponentsConfiguration : Y, Cb, Cr, -<br>
+ComponentsConfiguration : YCbCr<br>
+<br>
+DateTime : undefined<br>
+DateTime : 2003:03:22 01:06:40<br>
+<br>
+DateTimeDigitized : undefined<br>
+DateTimeDigitized : 2003:03:22 01:06:40<br>
+<br>
+ExifIFDPointer : undefined<br>
+ExifIFDPointer : 156<br>
+<br>
+ExposureBias : undefined<br>
+ExposureBias : 0<br>
+<br>
+ExposureProgram : Program AE<br>
+ExposureProgram : Normal program<br>
+<br>
+FileSource : Digital Camera<br>
+FileSource : DSC<br>
+<br>
+Flash : Fired<br>
+Flash : Flash fired<br>
+<br>
+ISOSpeedRatings : undefined<br>
+ISOSpeedRatings : 133<br>
+<br>
+ImageDescription : ?<br>
+ImageDescription : <br>
+<br>
+LightSource : Unknown<br>
+LightSource : <br>
+<br>
+MeteringMode : Center-weighted average<br>
+MeteringMode : CenterWeightedAverage<br>
+<br>
+PixelXDimension : undefined<br>
+PixelXDimension : 1280<br>
+<br>
+PixelYDimension : undefined<br>
+PixelYDimension : 1024<br>
+<br>
+YCbCrPositioning : Co-sited<br>
+YCbCrPositioning : 2<br>
+</td>
+</tr>
+<tr>
+<td>sampleImages/Packard/PackardBellDSC-200.jpg</td>
+<td>ColorSpace<br>
+Copyright<br>
+DateTimeOriginal<br>
+ExifVersion<br>
+FNumber<br>
+FlashpixVersion<br>
+Make<br>
+Model<br>
+SceneType<br>
+XResolution<br>
+YResolution</td>
+<td>ComponentsConfiguration : Y, Cb, Cr, -<br>
+ComponentsConfiguration : YCbCr<br>
+<br>
+DateTime : undefined<br>
+DateTime : 2004:03:05 11:28:04<br>
+<br>
+DateTimeDigitized : undefined<br>
+DateTimeDigitized : 2004:03:05 11:28:04<br>
+<br>
+ExifIFDPointer : undefined<br>
+ExifIFDPointer : 250<br>
+<br>
+ExposureBias : undefined<br>
+ExposureBias : 0<br>
+<br>
+ExposureProgram : Landscape<br>
+ExposureProgram : Landscape mode<br>
+<br>
+ExposureTime : 1/26<br>
+ExposureTime : 0.038461538461538464<br>
+<br>
+FileSource : Digital Camera<br>
+FileSource : DSC<br>
+<br>
+Flash : No Flash<br>
+Flash : Flash did not fire<br>
+<br>
+FocalLength : 6.8 mm<br>
+FocalLength : 6.8<br>
+<br>
+ISOSpeedRatings : undefined<br>
+ISOSpeedRatings : 100<br>
+<br>
+InteroperabilityIFDPointer : undefined<br>
+InteroperabilityIFDPointer : 570<br>
+<br>
+MeteringMode : Center-weighted average<br>
+MeteringMode : CenterWeightedAverage<br>
+<br>
+Orientation : Horizontal (normal)<br>
+Orientation : 1<br>
+<br>
+PixelXDimension : undefined<br>
+PixelXDimension : 829<br>
+<br>
+PixelYDimension : undefined<br>
+PixelYDimension : 622<br>
+<br>
+ResolutionUnit : inches<br>
+ResolutionUnit : 2<br>
+<br>
+SensingMethod : One-chip color area<br>
+SensingMethod : One-chip color area sensor<br>
+<br>
+Software : V0.98 & SDK 3.8<br>
+Software : V0.98  SDK 3.8<br>
+<br>
+YCbCrPositioning : Co-sited<br>
+YCbCrPositioning : 2<br>
+</td>
+</tr>
+</tbody></table>
     </div>
 
 
