--- a/report/sampleImages-Sagem.html
+++ b/report/sampleImages-Sagem.html
@@ -23,7 +23,427 @@
     <div class="container-fluid">
         <h1>exiftool.js coverage report</h1>
         <p>Compare the outputs from exiftool and exiftool.js</p>
-        <table class='table table-bordered'><thead><tr><th>image</th><th>supported tags</th><th>unsupported tags (perl output, followed by js output)</th></tr></thead><tbody><tr><td>sampleImages/Sagem/Sagem_myX6-2.jpg</td><td>Make<br>Model</td><td>DateTime : undefined<br>DateTime : 2008:07:02 18:28:00<br><br>Orientation : Horizontal (normal)<br>Orientation : 1<br></td></tr><tr><td>sampleImages/Sagem/Sagem_myX-8.jpg</td><td>Make<br>Model</td><td></td></tr><tr><td>sampleImages/Sagem/Sagem_myMovieBox.jpg</td><td>Artist<br>ColorSpace<br>DateTimeOriginal<br>ExifVersion<br>FlashpixVersion<br>ImageDescription<br>Make<br>Model<br>Software<br>XResolution<br>YResolution</td><td>ComponentsConfiguration : Y, Cb, Cr, -<br>ComponentsConfiguration : YCbCr<br><br>DateTime : undefined<br>DateTime : 2008:07:26 13:51:54<br><br>ExifIFDPointer : undefined<br>ExifIFDPointer : 158<br><br>Orientation : Horizontal (normal)<br>Orientation : 1<br><br>PixelXDimension : undefined<br>PixelXDimension : 1600<br><br>PixelYDimension : undefined<br>PixelYDimension : 1200<br><br>ResolutionUnit : inches<br>ResolutionUnit : 2<br><br>YCbCrPositioning : Centered<br>YCbCrPositioning : 1<br></td></tr><tr><td>sampleImages/Sagem/Sagem_my850C.jpg</td><td>ColorSpace<br>Copyright<br>DateTimeOriginal<br>ExifVersion<br>FlashpixVersion<br>Make<br>Model<br>XResolution<br>YResolution</td><td>ComponentsConfiguration : R, G, B, -<br>ComponentsConfiguration : RGB<br><br>DateTime : undefined<br>DateTime : 2004:01:01 16:30:36<br><br>DateTimeDigitized : undefined<br>DateTimeDigitized : 2009:06:21 13:57:33<br><br>ExifIFDPointer : undefined<br>ExifIFDPointer : 216<br><br>InteroperabilityIFDPointer : undefined<br>InteroperabilityIFDPointer : 370<br><br>PixelXDimension : undefined<br>PixelXDimension : 1200<br><br>PixelYDimension : undefined<br>PixelYDimension : 1600<br><br>ResolutionUnit : cm<br>ResolutionUnit : 3<br><br>Software : EAE_1G<br>Software : EAE1G<br><br>YCbCrPositioning : Centered<br>YCbCrPositioning : 1<br></td></tr><tr><td>sampleImages/Sagem/Sagem_my750X.jpg</td><td>ColorSpace<br>Copyright<br>DateTimeOriginal<br>ExifVersion<br>FlashpixVersion<br>Make<br>Model<br>XResolution<br>YResolution</td><td>ComponentsConfiguration : R, G, B, -<br>ComponentsConfiguration : RGB<br><br>DateTime : undefined<br>DateTime : 2004:01:01 16:30:36<br><br>DateTimeDigitized : undefined<br>DateTimeDigitized : 2010:02:18 14:02:40<br><br>ExifIFDPointer : undefined<br>ExifIFDPointer : 216<br><br>PixelXDimension : undefined<br>PixelXDimension : 2048<br><br>PixelYDimension : undefined<br>PixelYDimension : 1536<br><br>ResolutionUnit : cm<br>ResolutionUnit : 3<br><br>Software : ETE_4D<br>Software : ETE4D<br><br>YCbCrPositioning : Centered<br>YCbCrPositioning : 1<br></td></tr><tr><td>sampleImages/Sagem/Sagem_my730C.jpg</td><td>ColorSpace<br>Copyright<br>DateTimeOriginal<br>ExifVersion<br>FlashpixVersion<br>Make<br>Model<br>XResolution<br>YResolution</td><td>ComponentsConfiguration : R, G, B, -<br>ComponentsConfiguration : RGB<br><br>DateTime : undefined<br>DateTime : 2004:01:01 16:30:36<br><br>DateTimeDigitized : undefined<br>DateTimeDigitized : 2010:01:23 10:39:47<br><br>ExifIFDPointer : undefined<br>ExifIFDPointer : 216<br><br>InteroperabilityIFDPointer : undefined<br>InteroperabilityIFDPointer : 370<br><br>PixelXDimension : undefined<br>PixelXDimension : 480<br><br>PixelYDimension : undefined<br>PixelYDimension : 640<br><br>ResolutionUnit : cm<br>ResolutionUnit : 3<br><br>Software : ETE_3C<br>Software : ETE3C<br><br>YCbCrPositioning : Centered<br>YCbCrPositioning : 1<br></td></tr><tr><td>sampleImages/Sagem/Sagem_my700x.jpg</td><td>Artist<br>ColorSpace<br>DateTimeOriginal<br>ExifVersion<br>FlashpixVersion<br>ImageDescription<br>Make<br>Model<br>Software<br>XResolution<br>YResolution</td><td>ComponentsConfiguration : Y, Cb, Cr, -<br>ComponentsConfiguration : YCbCr<br><br>DateTime : undefined<br>DateTime : 2008:01:30 22:21:10<br><br>ExifIFDPointer : undefined<br>ExifIFDPointer : 158<br><br>Orientation : Horizontal (normal)<br>Orientation : 1<br><br>PixelXDimension : undefined<br>PixelXDimension : 1024<br><br>PixelYDimension : undefined<br>PixelYDimension : 1280<br><br>ResolutionUnit : inches<br>ResolutionUnit : 2<br><br>YCbCrPositioning : Centered<br>YCbCrPositioning : 1<br></td></tr><tr><td>sampleImages/Sagem/Sagem_my511X.jpg</td><td>ColorSpace<br>DateTimeOriginal<br>ExifVersion<br>Flash<br>FlashpixVersion<br>Make<br>Model<br>SceneCaptureType<br>Software<br>XResolution<br>YResolution</td><td>ComponentsConfiguration : Y, Cb, Cr, -<br>ComponentsConfiguration : YCbCr<br><br>CustomRendered : Normal<br>CustomRendered : Normal process<br><br>DateTime : undefined<br>DateTime : 2009:06:18 11:36:02<br><br>DateTimeDigitized : undefined<br>DateTimeDigitized : 2009:06:18 11:36:02<br><br>DigitalZoomRation : undefined<br>DigitalZoomRation : 0<br><br>ExifIFDPointer : undefined<br>ExifIFDPointer : 203<br><br>InteroperabilityIFDPointer : undefined<br>InteroperabilityIFDPointer : 449<br><br>LightSource : Unknown<br>LightSource : <br><br>MeteringMode : Unknown<br>MeteringMode : <br><br>Orientation : Horizontal (normal)<br>Orientation : 1<br><br>PixelXDimension : undefined<br>PixelXDimension : 480<br><br>PixelYDimension : undefined<br>PixelYDimension : 640<br><br>ResolutionUnit : inches<br>ResolutionUnit : 2<br><br>SubjectDistanceRange : Unknown<br>SubjectDistanceRange : <br><br>YCbCrPositioning : Centered<br>YCbCrPositioning : 1<br></td></tr><tr><td>sampleImages/Sagem/Sagem_my501X.jpg</td><td>Artist<br>ColorSpace<br>DateTimeOriginal<br>ExifVersion<br>FlashpixVersion<br>ImageDescription<br>Make<br>Model<br>Software<br>XResolution<br>YResolution</td><td>ComponentsConfiguration : Y, Cb, Cr, -<br>ComponentsConfiguration : YCbCr<br><br>DateTime : undefined<br>DateTime : 2010:04:26 23:37:06<br><br>ExifIFDPointer : undefined<br>ExifIFDPointer : 158<br><br>Orientation : Horizontal (normal)<br>Orientation : 1<br><br>PixelXDimension : undefined<br>PixelXDimension : 768<br><br>PixelYDimension : undefined<br>PixelYDimension : 1024<br><br>ResolutionUnit : inches<br>ResolutionUnit : 2<br><br>YCbCrPositioning : Centered<br>YCbCrPositioning : 1<br></td></tr><tr><td>sampleImages/Sagem/Sagem_my411X.jpg</td><td>Artist<br>ImageDescription<br>Make<br>Model</td><td>DateTime : undefined<br>DateTime : 2011:08:30 11:44:16<br><br>ExifIFDPointer : undefined<br>ExifIFDPointer : 151<br><br>UserComment : MFM Team<br>UserComment : 77,70,77,32,84,101,97,109<br></td></tr><tr><td>sampleImages/Sagem/Sagem_my411V.jpg</td><td>Artist<br>ImageDescription<br>Make<br>Model</td><td>DateTime : undefined<br>DateTime : 2009:05:17 11:32:55<br><br>ExifIFDPointer : undefined<br>ExifIFDPointer : 151<br><br>UserComment : MFM Team<br>UserComment : 77,70,77,32,84,101,97,109<br></td></tr><tr><td>sampleImages/Sagem/Sagem_my411C.jpg</td><td>Artist<br>ImageDescription<br>Make<br>Model</td><td>DateTime : undefined<br>DateTime : 2011:11:16 07:59:45<br><br>ExifIFDPointer : undefined<br>ExifIFDPointer : 151<br><br>UserComment : MFM Team<br>UserComment : 77,70,77,32,84,101,97,109<br></td></tr><tr><td>sampleImages/Sagem/Sagem_my401C.jpg</td><td>Artist<br>ImageDescription<br>Make<br>Model</td><td>DateTime : undefined<br>DateTime : 2010:04:30 23:49:44<br><br>ExifIFDPointer : undefined<br>ExifIFDPointer : 151<br><br>UserComment : MFM Team<br>UserComment : 77,70,77,32,84,101,97,109<br></td></tr><tr><td>sampleImages/Sagem/SagemVF527.jpg</td><td>ColorSpace<br>DateTimeOriginal<br>ExifVersion<br>Flash<br>FlashpixVersion<br>Make<br>Model<br>Software<br>XResolution<br>YResolution</td><td>ComponentsConfiguration : Y, Cb, Cr, -<br>ComponentsConfiguration : YCbCr<br><br>DateTime : undefined<br>DateTime : 2010:02:21 14:56:58<br><br>DateTimeDigitized : undefined<br>DateTimeDigitized : 2010:02:21 14:56:58<br><br>ExifIFDPointer : undefined<br>ExifIFDPointer : 246<br><br>LightSource : Unknown<br>LightSource : <br><br>MeteringMode : Unknown<br>MeteringMode : <br><br>PixelXDimension : undefined<br>PixelXDimension : 640<br><br>PixelYDimension : undefined<br>PixelYDimension : 480<br><br>ResolutionUnit : inches<br>ResolutionUnit : 2<br><br>YCbCrPositioning : Centered<br>YCbCrPositioning : 1<br></td></tr></tbody></table>
+        <table class='table table-bordered'><thead><tr><th>image</th><th>supported tags</th><th>unsupported tags (perl output, followed by js output)</th></tr></thead><tbody><tr>
+<td>sampleImages/Sagem/Sagem_myX6-2.jpg</td>
+<td>Make<br>
+Model</td>
+<td>DateTime : undefined<br>
+DateTime : 2008:07:02 18:28:00<br>
+<br>
+Orientation : Horizontal (normal)<br>
+Orientation : 1<br>
+</td>
+</tr>
+<tr>
+<td>sampleImages/Sagem/Sagem_myX-8.jpg</td>
+<td>Make<br>
+Model</td>
+<td></td>
+</tr>
+<tr>
+<td>sampleImages/Sagem/Sagem_myMovieBox.jpg</td>
+<td>Artist<br>
+ColorSpace<br>
+DateTimeOriginal<br>
+ExifVersion<br>
+FlashpixVersion<br>
+ImageDescription<br>
+Make<br>
+Model<br>
+Software<br>
+XResolution<br>
+YResolution</td>
+<td>ComponentsConfiguration : Y, Cb, Cr, -<br>
+ComponentsConfiguration : YCbCr<br>
+<br>
+DateTime : undefined<br>
+DateTime : 2008:07:26 13:51:54<br>
+<br>
+ExifIFDPointer : undefined<br>
+ExifIFDPointer : 158<br>
+<br>
+Orientation : Horizontal (normal)<br>
+Orientation : 1<br>
+<br>
+PixelXDimension : undefined<br>
+PixelXDimension : 1600<br>
+<br>
+PixelYDimension : undefined<br>
+PixelYDimension : 1200<br>
+<br>
+ResolutionUnit : inches<br>
+ResolutionUnit : 2<br>
+<br>
+YCbCrPositioning : Centered<br>
+YCbCrPositioning : 1<br>
+</td>
+</tr>
+<tr>
+<td>sampleImages/Sagem/Sagem_my850C.jpg</td>
+<td>ColorSpace<br>
+Copyright<br>
+DateTimeOriginal<br>
+ExifVersion<br>
+FlashpixVersion<br>
+Make<br>
+Model<br>
+XResolution<br>
+YResolution</td>
+<td>ComponentsConfiguration : R, G, B, -<br>
+ComponentsConfiguration : RGB<br>
+<br>
+DateTime : undefined<br>
+DateTime : 2004:01:01 16:30:36<br>
+<br>
+DateTimeDigitized : undefined<br>
+DateTimeDigitized : 2009:06:21 13:57:33<br>
+<br>
+ExifIFDPointer : undefined<br>
+ExifIFDPointer : 216<br>
+<br>
+InteroperabilityIFDPointer : undefined<br>
+InteroperabilityIFDPointer : 370<br>
+<br>
+PixelXDimension : undefined<br>
+PixelXDimension : 1200<br>
+<br>
+PixelYDimension : undefined<br>
+PixelYDimension : 1600<br>
+<br>
+ResolutionUnit : cm<br>
+ResolutionUnit : 3<br>
+<br>
+Software : EAE_1G<br>
+Software : EAE1G<br>
+<br>
+YCbCrPositioning : Centered<br>
+YCbCrPositioning : 1<br>
+</td>
+</tr>
+<tr>
+<td>sampleImages/Sagem/Sagem_my750X.jpg</td>
+<td>ColorSpace<br>
+Copyright<br>
+DateTimeOriginal<br>
+ExifVersion<br>
+FlashpixVersion<br>
+Make<br>
+Model<br>
+XResolution<br>
+YResolution</td>
+<td>ComponentsConfiguration : R, G, B, -<br>
+ComponentsConfiguration : RGB<br>
+<br>
+DateTime : undefined<br>
+DateTime : 2004:01:01 16:30:36<br>
+<br>
+DateTimeDigitized : undefined<br>
+DateTimeDigitized : 2010:02:18 14:02:40<br>
+<br>
+ExifIFDPointer : undefined<br>
+ExifIFDPointer : 216<br>
+<br>
+PixelXDimension : undefined<br>
+PixelXDimension : 2048<br>
+<br>
+PixelYDimension : undefined<br>
+PixelYDimension : 1536<br>
+<br>
+ResolutionUnit : cm<br>
+ResolutionUnit : 3<br>
+<br>
+Software : ETE_4D<br>
+Software : ETE4D<br>
+<br>
+YCbCrPositioning : Centered<br>
+YCbCrPositioning : 1<br>
+</td>
+</tr>
+<tr>
+<td>sampleImages/Sagem/Sagem_my730C.jpg</td>
+<td>ColorSpace<br>
+Copyright<br>
+DateTimeOriginal<br>
+ExifVersion<br>
+FlashpixVersion<br>
+Make<br>
+Model<br>
+XResolution<br>
+YResolution</td>
+<td>ComponentsConfiguration : R, G, B, -<br>
+ComponentsConfiguration : RGB<br>
+<br>
+DateTime : undefined<br>
+DateTime : 2004:01:01 16:30:36<br>
+<br>
+DateTimeDigitized : undefined<br>
+DateTimeDigitized : 2010:01:23 10:39:47<br>
+<br>
+ExifIFDPointer : undefined<br>
+ExifIFDPointer : 216<br>
+<br>
+InteroperabilityIFDPointer : undefined<br>
+InteroperabilityIFDPointer : 370<br>
+<br>
+PixelXDimension : undefined<br>
+PixelXDimension : 480<br>
+<br>
+PixelYDimension : undefined<br>
+PixelYDimension : 640<br>
+<br>
+ResolutionUnit : cm<br>
+ResolutionUnit : 3<br>
+<br>
+Software : ETE_3C<br>
+Software : ETE3C<br>
+<br>
+YCbCrPositioning : Centered<br>
+YCbCrPositioning : 1<br>
+</td>
+</tr>
+<tr>
+<td>sampleImages/Sagem/Sagem_my700x.jpg</td>
+<td>Artist<br>
+ColorSpace<br>
+DateTimeOriginal<br>
+ExifVersion<br>
+FlashpixVersion<br>
+ImageDescription<br>
+Make<br>
+Model<br>
+Software<br>
+XResolution<br>
+YResolution</td>
+<td>ComponentsConfiguration : Y, Cb, Cr, -<br>
+ComponentsConfiguration : YCbCr<br>
+<br>
+DateTime : undefined<br>
+DateTime : 2008:01:30 22:21:10<br>
+<br>
+ExifIFDPointer : undefined<br>
+ExifIFDPointer : 158<br>
+<br>
+Orientation : Horizontal (normal)<br>
+Orientation : 1<br>
+<br>
+PixelXDimension : undefined<br>
+PixelXDimension : 1024<br>
+<br>
+PixelYDimension : undefined<br>
+PixelYDimension : 1280<br>
+<br>
+ResolutionUnit : inches<br>
+ResolutionUnit : 2<br>
+<br>
+YCbCrPositioning : Centered<br>
+YCbCrPositioning : 1<br>
+</td>
+</tr>
+<tr>
+<td>sampleImages/Sagem/Sagem_my511X.jpg</td>
+<td>ColorSpace<br>
+DateTimeOriginal<br>
+ExifVersion<br>
+Flash<br>
+FlashpixVersion<br>
+Make<br>
+Model<br>
+SceneCaptureType<br>
+Software<br>
+XResolution<br>
+YResolution</td>
+<td>ComponentsConfiguration : Y, Cb, Cr, -<br>
+ComponentsConfiguration : YCbCr<br>
+<br>
+CustomRendered : Normal<br>
+CustomRendered : Normal process<br>
+<br>
+DateTime : undefined<br>
+DateTime : 2009:06:18 11:36:02<br>
+<br>
+DateTimeDigitized : undefined<br>
+DateTimeDigitized : 2009:06:18 11:36:02<br>
+<br>
+DigitalZoomRation : undefined<br>
+DigitalZoomRation : 0<br>
+<br>
+ExifIFDPointer : undefined<br>
+ExifIFDPointer : 203<br>
+<br>
+InteroperabilityIFDPointer : undefined<br>
+InteroperabilityIFDPointer : 449<br>
+<br>
+LightSource : Unknown<br>
+LightSource : <br>
+<br>
+MeteringMode : Unknown<br>
+MeteringMode : <br>
+<br>
+Orientation : Horizontal (normal)<br>
+Orientation : 1<br>
+<br>
+PixelXDimension : undefined<br>
+PixelXDimension : 480<br>
+<br>
+PixelYDimension : undefined<br>
+PixelYDimension : 640<br>
+<br>
+ResolutionUnit : inches<br>
+ResolutionUnit : 2<br>
+<br>
+SubjectDistanceRange : Unknown<br>
+SubjectDistanceRange : <br>
+<br>
+YCbCrPositioning : Centered<br>
+YCbCrPositioning : 1<br>
+</td>
+</tr>
+<tr>
+<td>sampleImages/Sagem/Sagem_my501X.jpg</td>
+<td>Artist<br>
+ColorSpace<br>
+DateTimeOriginal<br>
+ExifVersion<br>
+FlashpixVersion<br>
+ImageDescription<br>
+Make<br>
+Model<br>
+Software<br>
+XResolution<br>
+YResolution</td>
+<td>ComponentsConfiguration : Y, Cb, Cr, -<br>
+ComponentsConfiguration : YCbCr<br>
+<br>
+DateTime : undefined<br>
+DateTime : 2010:04:26 23:37:06<br>
+<br>
+ExifIFDPointer : undefined<br>
+ExifIFDPointer : 158<br>
+<br>
+Orientation : Horizontal (normal)<br>
+Orientation : 1<br>
+<br>
+PixelXDimension : undefined<br>
+PixelXDimension : 768<br>
+<br>
+PixelYDimension : undefined<br>
+PixelYDimension : 1024<br>
+<br>
+ResolutionUnit : inches<br>
+ResolutionUnit : 2<br>
+<br>
+YCbCrPositioning : Centered<br>
+YCbCrPositioning : 1<br>
+</td>
+</tr>
+<tr>
+<td>sampleImages/Sagem/Sagem_my411X.jpg</td>
+<td>Artist<br>
+ImageDescription<br>
+Make<br>
+Model</td>
+<td>DateTime : undefined<br>
+DateTime : 2011:08:30 11:44:16<br>
+<br>
+ExifIFDPointer : undefined<br>
+ExifIFDPointer : 151<br>
+<br>
+UserComment : MFM Team<br>
+UserComment : 77,70,77,32,84,101,97,109<br>
+</td>
+</tr>
+<tr>
+<td>sampleImages/Sagem/Sagem_my411V.jpg</td>
+<td>Artist<br>
+ImageDescription<br>
+Make<br>
+Model</td>
+<td>DateTime : undefined<br>
+DateTime : 2009:05:17 11:32:55<br>
+<br>
+ExifIFDPointer : undefined<br>
+ExifIFDPointer : 151<br>
+<br>
+UserComment : MFM Team<br>
+UserComment : 77,70,77,32,84,101,97,109<br>
+</td>
+</tr>
+<tr>
+<td>sampleImages/Sagem/Sagem_my411C.jpg</td>
+<td>Artist<br>
+ImageDescription<br>
+Make<br>
+Model</td>
+<td>DateTime : undefined<br>
+DateTime : 2011:11:16 07:59:45<br>
+<br>
+ExifIFDPointer : undefined<br>
+ExifIFDPointer : 151<br>
+<br>
+UserComment : MFM Team<br>
+UserComment : 77,70,77,32,84,101,97,109<br>
+</td>
+</tr>
+<tr>
+<td>sampleImages/Sagem/Sagem_my401C.jpg</td>
+<td>Artist<br>
+ImageDescription<br>
+Make<br>
+Model</td>
+<td>DateTime : undefined<br>
+DateTime : 2010:04:30 23:49:44<br>
+<br>
+ExifIFDPointer : undefined<br>
+ExifIFDPointer : 151<br>
+<br>
+UserComment : MFM Team<br>
+UserComment : 77,70,77,32,84,101,97,109<br>
+</td>
+</tr>
+<tr>
+<td>sampleImages/Sagem/SagemVF527.jpg</td>
+<td>ColorSpace<br>
+DateTimeOriginal<br>
+ExifVersion<br>
+Flash<br>
+FlashpixVersion<br>
+Make<br>
+Model<br>
+Software<br>
+XResolution<br>
+YResolution</td>
+<td>ComponentsConfiguration : Y, Cb, Cr, -<br>
+ComponentsConfiguration : YCbCr<br>
+<br>
+DateTime : undefined<br>
+DateTime : 2010:02:21 14:56:58<br>
+<br>
+DateTimeDigitized : undefined<br>
+DateTimeDigitized : 2010:02:21 14:56:58<br>
+<br>
+ExifIFDPointer : undefined<br>
+ExifIFDPointer : 246<br>
+<br>
+LightSource : Unknown<br>
+LightSource : <br>
+<br>
+MeteringMode : Unknown<br>
+MeteringMode : <br>
+<br>
+PixelXDimension : undefined<br>
+PixelXDimension : 640<br>
+<br>
+PixelYDimension : undefined<br>
+PixelYDimension : 480<br>
+<br>
+ResolutionUnit : inches<br>
+ResolutionUnit : 2<br>
+<br>
+YCbCrPositioning : Centered<br>
+YCbCrPositioning : 1<br>
+</td>
+</tr>
+</tbody></table>
     </div>
 
 
