--- a/report/sampleImages-T-Mobile.html
+++ b/report/sampleImages-T-Mobile.html
@@ -23,7 +23,83 @@
     <div class="container-fluid">
         <h1>exiftool.js coverage report</h1>
         <p>Compare the outputs from exiftool and exiftool.js</p>
-        <table class='table table-bordered'><thead><tr><th>image</th><th>supported tags</th><th>unsupported tags (perl output, followed by js output)</th></tr></thead><tbody><tr><td>sampleImages/T-Mobile/T-MobileSidekickLX.jpg</td><td>ColorSpace<br>DateTimeOriginal<br>ExifVersion<br>FlashpixVersion<br>Make<br>Model<br>XResolution<br>YResolution</td><td>ComponentsConfiguration : Y, Cb, Cr, -<br>ComponentsConfiguration : YCbCr<br><br>DateTime : undefined<br>DateTime : 2008:03:29 11:26:21<br><br>DateTimeDigitized : undefined<br>DateTimeDigitized : 2008:03:29 11:26:21<br><br>ExifIFDPointer : undefined<br>ExifIFDPointer : 170<br><br>PixelXDimension : undefined<br>PixelXDimension : 1280<br><br>PixelYDimension : undefined<br>PixelYDimension : 1024<br><br>ResolutionUnit : inches<br>ResolutionUnit : 2<br><br>UserComment : My Comment<br>UserComment : 65,83,67,73,73,0,0,0,77,121,32,67,111,109,109,101,110,116<br><br>YCbCrPositioning : Centered<br>YCbCrPositioning : 1<br></td></tr><tr><td>sampleImages/T-Mobile/T-MobilePulse.jpg</td><td>ColorSpace<br>DateTimeOriginal<br>ExifVersion<br>FlashpixVersion<br>Make<br>Model<br>XResolution<br>YResolution</td><td>ComponentsConfiguration : Y, Cb, Cr, -<br>ComponentsConfiguration : YCbCr<br><br>DateTimeDigitized : undefined<br>DateTimeDigitized : 2002:12:08 12:00:00<br><br>ExifIFDPointer : undefined<br>ExifIFDPointer : 140<br><br>GPSInfoIFDPointer : undefined<br>GPSInfoIFDPointer : 324<br><br>InteroperabilityIFDPointer : undefined<br>InteroperabilityIFDPointer : 294<br><br>PixelXDimension : undefined<br>PixelXDimension : 2048<br><br>PixelYDimension : undefined<br>PixelYDimension : 1536<br><br>ResolutionUnit : inches<br>ResolutionUnit : 2<br><br>YCbCrPositioning : Centered<br>YCbCrPositioning : 1<br></td></tr></tbody></table>
+        <table class='table table-bordered'><thead><tr><th>image</th><th>supported tags</th><th>unsupported tags (perl output, followed by js output)</th></tr></thead><tbody><tr>
+<td>sampleImages/T-Mobile/T-MobileSidekickLX.jpg</td>
+<td>ColorSpace<br>
+DateTimeOriginal<br>
+ExifVersion<br>
+FlashpixVersion<br>
+Make<br>
+Model<br>
+XResolution<br>
+YResolution</td>
+<td>ComponentsConfiguration : Y, Cb, Cr, -<br>
+ComponentsConfiguration : YCbCr<br>
+<br>
+DateTime : undefined<br>
+DateTime : 2008:03:29 11:26:21<br>
+<br>
+DateTimeDigitized : undefined<br>
+DateTimeDigitized : 2008:03:29 11:26:21<br>
+<br>
+ExifIFDPointer : undefined<br>
+ExifIFDPointer : 170<br>
+<br>
+PixelXDimension : undefined<br>
+PixelXDimension : 1280<br>
+<br>
+PixelYDimension : undefined<br>
+PixelYDimension : 1024<br>
+<br>
+ResolutionUnit : inches<br>
+ResolutionUnit : 2<br>
+<br>
+UserComment : My Comment<br>
+UserComment : 65,83,67,73,73,0,0,0,77,121,32,67,111,109,109,101,110,116<br>
+<br>
+YCbCrPositioning : Centered<br>
+YCbCrPositioning : 1<br>
+</td>
+</tr>
+<tr>
+<td>sampleImages/T-Mobile/T-MobilePulse.jpg</td>
+<td>ColorSpace<br>
+DateTimeOriginal<br>
+ExifVersion<br>
+FlashpixVersion<br>
+Make<br>
+Model<br>
+XResolution<br>
+YResolution</td>
+<td>ComponentsConfiguration : Y, Cb, Cr, -<br>
+ComponentsConfiguration : YCbCr<br>
+<br>
+DateTimeDigitized : undefined<br>
+DateTimeDigitized : 2002:12:08 12:00:00<br>
+<br>
+ExifIFDPointer : undefined<br>
+ExifIFDPointer : 140<br>
+<br>
+GPSInfoIFDPointer : undefined<br>
+GPSInfoIFDPointer : 324<br>
+<br>
+InteroperabilityIFDPointer : undefined<br>
+InteroperabilityIFDPointer : 294<br>
+<br>
+PixelXDimension : undefined<br>
+PixelXDimension : 2048<br>
+<br>
+PixelYDimension : undefined<br>
+PixelYDimension : 1536<br>
+<br>
+ResolutionUnit : inches<br>
+ResolutionUnit : 2<br>
+<br>
+YCbCrPositioning : Centered<br>
+YCbCrPositioning : 1<br>
+</td>
+</tr>
+</tbody></table>
     </div>
 
 
