--- a/report/sampleImages-Google.html
+++ b/report/sampleImages-Google.html
@@ -23,8 +23,76 @@
     <div class="container-fluid">
         <h1>exiftool.js coverage report</h1>
         <p>Compare the outputs from exiftool and exiftool.js</p>
-        <table class='table table-bordered'><thead><tr><th>image</th><th>supported tags</th><th>unsupported tags (perl output, followed by js output)</th></tr></thead><tbody><tr><td>sampleImages/Google/GoogleNexusS.jpg</td><td>BrightnessValue<br>ColorSpace<br>DateTimeOriginal<br>ExifVersion<br>FNumber<br>Make<br>Model<br>Software</td><td>ApertureValue : 2.8<br>ApertureValue : 3<br><br>DateTime : undefined<br>DateTime : 2011:02:12 13:30:40<br><br>DateTimeDigitized : undefined<br>DateTimeDigitized : 2011:02:12 13:30:40<br><br>ExifIFDPointer : undefined<br>ExifIFDPointer : 190<br><br>ExposureBias : undefined<br>ExposureBias : NaN<br><br>ExposureProgram : Aperture-priority AE<br>ExposureProgram : Aperture priority<br><br>ExposureTime : 1/1000<br>ExposureTime : 0.001<br><br>Flash : No Flash<br>Flash : Flash did not fire<br><br>FocalLength : 3.4 mm<br>FocalLength : 3.43<br><br>ISOSpeedRatings : undefined<br>ISOSpeedRatings : 50<br><br>ImageHeight : 8<br>ImageHeight : 1920<br><br>ImageWidth : 8<br>ImageWidth : 2560<br><br>MaxApertureValue : 2.8<br>MaxApertureValue : 3<br><br>MeteringMode : Center-weighted average<br>MeteringMode : CenterWeightedAverage<br><br>PixelXDimension : undefined<br>PixelXDimension : 2560<br><br>PixelYDimension : undefined<br>PixelYDimension : 1920<br><br>ShutterSpeedValue : 1/1024<br>ShutterSpeedValue : 10<br><br>UserComment : 
-<br>UserComment : <br><br>YCbCrPositioning : Centered<br>YCbCrPositioning : 1<br></td></tr></tbody></table>
+        <table class='table table-bordered'><thead><tr><th>image</th><th>supported tags</th><th>unsupported tags (perl output, followed by js output)</th></tr></thead><tbody><tr>
+<td>sampleImages/Google/GoogleNexusS.jpg</td>
+<td>BrightnessValue<br>
+ColorSpace<br>
+DateTimeOriginal<br>
+ExifVersion<br>
+FNumber<br>
+Make<br>
+Model<br>
+Software</td>
+<td>ApertureValue : 2.8<br>
+ApertureValue : 3<br>
+<br>
+DateTime : undefined<br>
+DateTime : 2011:02:12 13:30:40<br>
+<br>
+DateTimeDigitized : undefined<br>
+DateTimeDigitized : 2011:02:12 13:30:40<br>
+<br>
+ExifIFDPointer : undefined<br>
+ExifIFDPointer : 190<br>
+<br>
+ExposureBias : undefined<br>
+ExposureBias : NaN<br>
+<br>
+ExposureProgram : Aperture-priority AE<br>
+ExposureProgram : Aperture priority<br>
+<br>
+ExposureTime : 1/1000<br>
+ExposureTime : 0.001<br>
+<br>
+Flash : No Flash<br>
+Flash : Flash did not fire<br>
+<br>
+FocalLength : 3.4 mm<br>
+FocalLength : 3.43<br>
+<br>
+ISOSpeedRatings : undefined<br>
+ISOSpeedRatings : 50<br>
+<br>
+ImageHeight : 8<br>
+ImageHeight : 1920<br>
+<br>
+ImageWidth : 8<br>
+ImageWidth : 2560<br>
+<br>
+MaxApertureValue : 2.8<br>
+MaxApertureValue : 3<br>
+<br>
+MeteringMode : Center-weighted average<br>
+MeteringMode : CenterWeightedAverage<br>
+<br>
+PixelXDimension : undefined<br>
+PixelXDimension : 2560<br>
+<br>
+PixelYDimension : undefined<br>
+PixelYDimension : 1920<br>
+<br>
+ShutterSpeedValue : 1/1024<br>
+ShutterSpeedValue : 10<br>
+<br>
+UserComment : 
+<br>
+UserComment : <br>
+<br>
+YCbCrPositioning : Centered<br>
+YCbCrPositioning : 1<br>
+</td>
+</tr>
+</tbody></table>
     </div>
 
 
