--- a/report/sampleImages-NEC.html
+++ b/report/sampleImages-NEC.html
@@ -23,7 +23,182 @@
     <div class="container-fluid">
         <h1>exiftool.js coverage report</h1>
         <p>Compare the outputs from exiftool and exiftool.js</p>
-        <table class='table table-bordered'><thead><tr><th>image</th><th>supported tags</th><th>unsupported tags (perl output, followed by js output)</th></tr></thead><tbody><tr><td>sampleImages/NEC/NEC_e949.jpg</td><td>ColorSpace<br>DateTimeOriginal<br>ExifVersion<br>FlashpixVersion<br>Make<br>Model<br>XResolution<br>YResolution</td><td>ComponentsConfiguration : Y, Cb, Cr, -<br>ComponentsConfiguration : YCbCr<br><br>DateTimeDigitized : undefined<br>DateTimeDigitized : 2008:04:06 12:05:48<br><br>ExifIFDPointer : undefined<br>ExifIFDPointer : 130<br><br>InteroperabilityIFDPointer : undefined<br>InteroperabilityIFDPointer : 280<br><br>PixelXDimension : undefined<br>PixelXDimension : 176<br><br>PixelYDimension : undefined<br>PixelYDimension : 220<br><br>ResolutionUnit : inches<br>ResolutionUnit : 2<br><br>YCbCrPositioning : Centered<br>YCbCrPositioning : 1<br></td></tr><tr><td>sampleImages/NEC/NEC_e540.jpg</td><td>ColorSpace<br>DateTimeOriginal<br>ExifVersion<br>FlashpixVersion<br>Make<br>Model<br>XResolution<br>YResolution</td><td>ComponentsConfiguration : Y, Cb, Cr, -<br>ComponentsConfiguration : YCbCr<br><br>DateTimeDigitized : undefined<br>DateTimeDigitized : 2007:08:12 10:45:49<br><br>ExifIFDPointer : undefined<br>ExifIFDPointer : 130<br><br>InteroperabilityIFDPointer : undefined<br>InteroperabilityIFDPointer : 280<br><br>PixelXDimension : undefined<br>PixelXDimension : 1280<br><br>PixelYDimension : undefined<br>PixelYDimension : 1024<br><br>ResolutionUnit : inches<br>ResolutionUnit : 2<br><br>YCbCrPositioning : Centered<br>YCbCrPositioning : 1<br></td></tr><tr><td>sampleImages/NEC/NEC_N500i.jpg</td><td>ColorSpace<br>DateTimeOriginal<br>ExifVersion<br>FlashpixVersion<br>Make<br>Model<br>XResolution<br>YResolution</td><td>ComponentsConfiguration : Y, Cb, Cr, -<br>ComponentsConfiguration : YCbCr<br><br>DateTime : undefined<br>DateTime : 2006:02:24 16:02:41<br><br>DateTimeDigitized : undefined<br>DateTimeDigitized : 2007:02:24 13:03:20<br><br>ExifIFDPointer : undefined<br>ExifIFDPointer : 152<br><br>PixelXDimension : undefined<br>PixelXDimension : 1024<br><br>PixelYDimension : undefined<br>PixelYDimension : 768<br><br>ResolutionUnit : inches<br>ResolutionUnit : 2<br><br>YCbCrPositioning : Centered<br>YCbCrPositioning : 1<br></td></tr><tr><td>sampleImages/NEC/NEC_N412i.jpg</td><td>ColorSpace<br>DateTimeOriginal<br>ExifVersion<br>FlashpixVersion<br>Make<br>Model<br>XResolution<br>YResolution</td><td>ComponentsConfiguration : Y, Cb, Cr, -<br>ComponentsConfiguration : YCbCr<br><br>DateTimeDigitized : undefined<br>DateTimeDigitized : 2008:06:08 08:27:07<br><br>ExifIFDPointer : undefined<br>ExifIFDPointer : 130<br><br>InteroperabilityIFDPointer : undefined<br>InteroperabilityIFDPointer : 280<br><br>PixelXDimension : undefined<br>PixelXDimension : 176<br><br>PixelYDimension : undefined<br>PixelYDimension : 144<br><br>ResolutionUnit : inches<br>ResolutionUnit : 2<br><br>YCbCrPositioning : Centered<br>YCbCrPositioning : 1<br></td></tr><tr><td>sampleImages/NEC/NEC_N411i.jpg</td><td>ColorSpace<br>DateTimeOriginal<br>ExifVersion<br>FlashpixVersion<br>Make<br>Model<br>XResolution<br>YResolution</td><td>ComponentsConfiguration : Y, Cb, Cr, -<br>ComponentsConfiguration : YCbCr<br><br>DateTimeDigitized : undefined<br>DateTimeDigitized : 2007:09:05 16:05:51<br><br>ExifIFDPointer : undefined<br>ExifIFDPointer : 130<br><br>InteroperabilityIFDPointer : undefined<br>InteroperabilityIFDPointer : 280<br><br>PixelXDimension : undefined<br>PixelXDimension : 1280<br><br>PixelYDimension : undefined<br>PixelYDimension : 1024<br><br>ResolutionUnit : inches<br>ResolutionUnit : 2<br><br>YCbCrPositioning : Centered<br>YCbCrPositioning : 1<br></td></tr></tbody></table>
+        <table class='table table-bordered'><thead><tr><th>image</th><th>supported tags</th><th>unsupported tags (perl output, followed by js output)</th></tr></thead><tbody><tr>
+<td>sampleImages/NEC/NEC_e949.jpg</td>
+<td>ColorSpace<br>
+DateTimeOriginal<br>
+ExifVersion<br>
+FlashpixVersion<br>
+Make<br>
+Model<br>
+XResolution<br>
+YResolution</td>
+<td>ComponentsConfiguration : Y, Cb, Cr, -<br>
+ComponentsConfiguration : YCbCr<br>
+<br>
+DateTimeDigitized : undefined<br>
+DateTimeDigitized : 2008:04:06 12:05:48<br>
+<br>
+ExifIFDPointer : undefined<br>
+ExifIFDPointer : 130<br>
+<br>
+InteroperabilityIFDPointer : undefined<br>
+InteroperabilityIFDPointer : 280<br>
+<br>
+PixelXDimension : undefined<br>
+PixelXDimension : 176<br>
+<br>
+PixelYDimension : undefined<br>
+PixelYDimension : 220<br>
+<br>
+ResolutionUnit : inches<br>
+ResolutionUnit : 2<br>
+<br>
+YCbCrPositioning : Centered<br>
+YCbCrPositioning : 1<br>
+</td>
+</tr>
+<tr>
+<td>sampleImages/NEC/NEC_e540.jpg</td>
+<td>ColorSpace<br>
+DateTimeOriginal<br>
+ExifVersion<br>
+FlashpixVersion<br>
+Make<br>
+Model<br>
+XResolution<br>
+YResolution</td>
+<td>ComponentsConfiguration : Y, Cb, Cr, -<br>
+ComponentsConfiguration : YCbCr<br>
+<br>
+DateTimeDigitized : undefined<br>
+DateTimeDigitized : 2007:08:12 10:45:49<br>
+<br>
+ExifIFDPointer : undefined<br>
+ExifIFDPointer : 130<br>
+<br>
+InteroperabilityIFDPointer : undefined<br>
+InteroperabilityIFDPointer : 280<br>
+<br>
+PixelXDimension : undefined<br>
+PixelXDimension : 1280<br>
+<br>
+PixelYDimension : undefined<br>
+PixelYDimension : 1024<br>
+<br>
+ResolutionUnit : inches<br>
+ResolutionUnit : 2<br>
+<br>
+YCbCrPositioning : Centered<br>
+YCbCrPositioning : 1<br>
+</td>
+</tr>
+<tr>
+<td>sampleImages/NEC/NEC_N500i.jpg</td>
+<td>ColorSpace<br>
+DateTimeOriginal<br>
+ExifVersion<br>
+FlashpixVersion<br>
+Make<br>
+Model<br>
+XResolution<br>
+YResolution</td>
+<td>ComponentsConfiguration : Y, Cb, Cr, -<br>
+ComponentsConfiguration : YCbCr<br>
+<br>
+DateTime : undefined<br>
+DateTime : 2006:02:24 16:02:41<br>
+<br>
+DateTimeDigitized : undefined<br>
+DateTimeDigitized : 2007:02:24 13:03:20<br>
+<br>
+ExifIFDPointer : undefined<br>
+ExifIFDPointer : 152<br>
+<br>
+PixelXDimension : undefined<br>
+PixelXDimension : 1024<br>
+<br>
+PixelYDimension : undefined<br>
+PixelYDimension : 768<br>
+<br>
+ResolutionUnit : inches<br>
+ResolutionUnit : 2<br>
+<br>
+YCbCrPositioning : Centered<br>
+YCbCrPositioning : 1<br>
+</td>
+</tr>
+<tr>
+<td>sampleImages/NEC/NEC_N412i.jpg</td>
+<td>ColorSpace<br>
+DateTimeOriginal<br>
+ExifVersion<br>
+FlashpixVersion<br>
+Make<br>
+Model<br>
+XResolution<br>
+YResolution</td>
+<td>ComponentsConfiguration : Y, Cb, Cr, -<br>
+ComponentsConfiguration : YCbCr<br>
+<br>
+DateTimeDigitized : undefined<br>
+DateTimeDigitized : 2008:06:08 08:27:07<br>
+<br>
+ExifIFDPointer : undefined<br>
+ExifIFDPointer : 130<br>
+<br>
+InteroperabilityIFDPointer : undefined<br>
+InteroperabilityIFDPointer : 280<br>
+<br>
+PixelXDimension : undefined<br>
+PixelXDimension : 176<br>
+<br>
+PixelYDimension : undefined<br>
+PixelYDimension : 144<br>
+<br>
+ResolutionUnit : inches<br>
+ResolutionUnit : 2<br>
+<br>
+YCbCrPositioning : Centered<br>
+YCbCrPositioning : 1<br>
+</td>
+</tr>
+<tr>
+<td>sampleImages/NEC/NEC_N411i.jpg</td>
+<td>ColorSpace<br>
+DateTimeOriginal<br>
+ExifVersion<br>
+FlashpixVersion<br>
+Make<br>
+Model<br>
+XResolution<br>
+YResolution</td>
+<td>ComponentsConfiguration : Y, Cb, Cr, -<br>
+ComponentsConfiguration : YCbCr<br>
+<br>
+DateTimeDigitized : undefined<br>
+DateTimeDigitized : 2007:09:05 16:05:51<br>
+<br>
+ExifIFDPointer : undefined<br>
+ExifIFDPointer : 130<br>
+<br>
+InteroperabilityIFDPointer : undefined<br>
+InteroperabilityIFDPointer : 280<br>
+<br>
+PixelXDimension : undefined<br>
+PixelXDimension : 1280<br>
+<br>
+PixelYDimension : undefined<br>
+PixelYDimension : 1024<br>
+<br>
+ResolutionUnit : inches<br>
+ResolutionUnit : 2<br>
+<br>
+YCbCrPositioning : Centered<br>
+YCbCrPositioning : 1<br>
+</td>
+</tr>
+</tbody></table>
     </div>
 
 
