--- a/report/sampleImages-Sprint.html
+++ b/report/sampleImages-Sprint.html
@@ -23,7 +23,80 @@
     <div class="container-fluid">
         <h1>exiftool.js coverage report</h1>
         <p>Compare the outputs from exiftool and exiftool.js</p>
-        <table class='table table-bordered'><thead><tr><th>image</th><th>supported tags</th><th>unsupported tags (perl output, followed by js output)</th></tr></thead><tbody><tr><td>sampleImages/Sprint/SprintKATANA_DLX.jpg</td><td>ColorSpace<br>Copyright<br>DateTimeOriginal<br>ExifVersion<br>Flash<br>FlashpixVersion<br>ImageDescription<br>ImageUniqueID<br>Make<br>Model<br>SceneCaptureType<br>XResolution<br>YResolution</td><td>ApertureValue : 2.8<br>ApertureValue : 3<br><br>ComponentsConfiguration : Y, Cb, Cr, -<br>ComponentsConfiguration : YCbCr<br><br>CustomRendered : Normal<br>CustomRendered : Normal process<br><br>DateTime : undefined<br>DateTime : 2008:08:05 18:44:55<br><br>DateTimeDigitized : undefined<br>DateTimeDigitized : 2008:08:05 18:44:55<br><br>DigitalZoomRation : undefined<br>DigitalZoomRation : 1<br><br>ExifIFDPointer : undefined<br>ExifIFDPointer : 202<br><br>ExposureMode : Auto<br>ExposureMode : 0<br><br>ExposureTime : 1/200<br>ExposureTime : 0.005<br><br>InteroperabilityIFDPointer : undefined<br>InteroperabilityIFDPointer : 652<br><br>MakerNoteIFDPointer : undefined<br>MakerNoteIFDPointer : 532<br><br>Orientation : Horizontal (normal)<br>Orientation : 1<br><br>PixelXDimension : undefined<br>PixelXDimension : 960<br><br>PixelYDimension : undefined<br>PixelYDimension : 1280<br><br>RelatedSoundFile :             <br>RelatedSoundFile : <br><br>ResolutionUnit : inches<br>ResolutionUnit : 2<br><br>ShutterSpeedValue : 1/190<br>ShutterSpeedValue : 7.57<br><br>WhiteBalance : Auto<br>WhiteBalance : Auto white balance<br><br>YCbCrPositioning : Centered<br>YCbCrPositioning : 1<br></td></tr></tbody></table>
+        <table class='table table-bordered'><thead><tr><th>image</th><th>supported tags</th><th>unsupported tags (perl output, followed by js output)</th></tr></thead><tbody><tr>
+<td>sampleImages/Sprint/SprintKATANA_DLX.jpg</td>
+<td>ColorSpace<br>
+Copyright<br>
+DateTimeOriginal<br>
+ExifVersion<br>
+Flash<br>
+FlashpixVersion<br>
+ImageDescription<br>
+ImageUniqueID<br>
+Make<br>
+Model<br>
+SceneCaptureType<br>
+XResolution<br>
+YResolution</td>
+<td>ApertureValue : 2.8<br>
+ApertureValue : 3<br>
+<br>
+ComponentsConfiguration : Y, Cb, Cr, -<br>
+ComponentsConfiguration : YCbCr<br>
+<br>
+CustomRendered : Normal<br>
+CustomRendered : Normal process<br>
+<br>
+DateTime : undefined<br>
+DateTime : 2008:08:05 18:44:55<br>
+<br>
+DateTimeDigitized : undefined<br>
+DateTimeDigitized : 2008:08:05 18:44:55<br>
+<br>
+DigitalZoomRation : undefined<br>
+DigitalZoomRation : 1<br>
+<br>
+ExifIFDPointer : undefined<br>
+ExifIFDPointer : 202<br>
+<br>
+ExposureMode : Auto<br>
+ExposureMode : 0<br>
+<br>
+ExposureTime : 1/200<br>
+ExposureTime : 0.005<br>
+<br>
+InteroperabilityIFDPointer : undefined<br>
+InteroperabilityIFDPointer : 652<br>
+<br>
+MakerNoteIFDPointer : undefined<br>
+MakerNoteIFDPointer : 532<br>
+<br>
+Orientation : Horizontal (normal)<br>
+Orientation : 1<br>
+<br>
+PixelXDimension : undefined<br>
+PixelXDimension : 960<br>
+<br>
+PixelYDimension : undefined<br>
+PixelYDimension : 1280<br>
+<br>
+RelatedSoundFile :             <br>
+RelatedSoundFile : <br>
+<br>
+ResolutionUnit : inches<br>
+ResolutionUnit : 2<br>
+<br>
+ShutterSpeedValue : 1/190<br>
+ShutterSpeedValue : 7.57<br>
+<br>
+WhiteBalance : Auto<br>
+WhiteBalance : Auto white balance<br>
+<br>
+YCbCrPositioning : Centered<br>
+YCbCrPositioning : 1<br>
+</td>
+</tr>
+</tbody></table>
     </div>
 
 
